Init update product behaviour

--- a/src/main/resources/templates/fragments/product/detail.html
+++ b/src/main/resources/templates/fragments/product/detail.html
@@ -16,6 +16,7 @@
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.price}"/></div><div class="divTableCell"><th:block th:text="*{price}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.discount}"/></div><div class="divTableCell"><th:block th:text="*{discount}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.newProduct}"/></div><div class="divTableCell"><th:block th:text="*{newProduct}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.offer}"/></div><div class="divTableCell"><th:block th:text="*{offer}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.categories}"/></div><div class="divTableCell">
                 <th:block th:each="category : *{categories}">
                     <p><th:block th:text="${category.code}"/></p>
