--- a/src/main/resources/templates/fragments/product/update.html
+++ b/src/main/resources/templates/fragments/product/update.html
@@ -1,6 +1,6 @@
 <div>
   <h2><th:block th:text="#{client.detail.title}"/></h2>
-  <form method="post" action="" th:object="${product}">
+  <form method="post" action="" th:object="${productDTO}">
   <div class="divTable table-details">
     <div class="divTableHeading">
       <div class="divTableRow">
@@ -9,24 +9,51 @@
       </div>
     </div>
     <div class="divTableBody">
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.code}"/></div><div class="divTableCell"><input type="text" th:field="*{code}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.description}"/></div><div class="divTableCell"><input type="text" th:field="*{description}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.brand}"/></div><div class="divTableCell"><input type="text" th:field="*{brand}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.model}"/></div><div class="divTableCell"><input type="text" th:field="*{model}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.price}"/></div><div class="divTableCell"><input type="text" th:field="*{price}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.discount}"/></div><div class="divTableCell"><input type="text" th:field="*{discount}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.newProduct}"/></div><div class="divTableCell"><input type="checkbox" th:checked="*{newProduct}"></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.offer}"/></div><div class="divTableCell"><input type="checkbox" th:checked="*{offer}"></div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.code}"/></div><div class="divTableCell"><input type="text" th:field="*{code}"/>
+        <p th:if="${#fields.hasErrors('code')}" th:errors="*{code}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.description}"/></div><div class="divTableCell"><input type="text" th:field="*{description}"/>
+        <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.brand}"/></div><div class="divTableCell"><input type="text" th:field="*{brand}"/>
+        <p th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.model}"/></div><div class="divTableCell"><input type="text" th:field="*{model}"/>
+        <p th:if="${#fields.hasErrors('model')}" th:errors="*{model}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.price}"/></div><div class="divTableCell"><input type="text" th:field="*{price}"/>
+        <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.discount}"/></div><div class="divTableCell"><input type="text" th:field="*{discount}"/>
+        <p th:if="${#fields.hasErrors('discount')}" th:errors="*{discount}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.newProduct}"/></div><div class="divTableCell"><input type="checkbox" th:field="*{newProduct}" value="true" th:checked="*{newProduct}">
+        <p th:if="${#fields.hasErrors('newProduct')}" th:errors="*{newProduct}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.offer}"/></div><div class="divTableCell"><input type="checkbox" th:field="*{offer}" value="true" th:checked="*{offer}">
+        <p th:if="${#fields.hasErrors('offer')}" th:errors="*{offer}" th:errorclass="error"/><br>
+      </div></div>
       <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.categories}"/></div><div class="divTableCell">
         <select th:field="*{categories}" multiple="multiple">
           <option th:each="category : ${categoryList}" th:value="${category.id}" th:text="${category.code}"></option>
         </select>
+        <p th:if="${#fields.hasErrors('categories')}" th:errors="*{categories}" th:errorclass="error"/><br>
       </div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.stock}"/></div><div class="divTableCell"><input type="text" th:field="*{stock}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minHiddenStock}"/></div><div class="divTableCell"><input type="text" th:field="*{minHiddenStock}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minSupplierRequest}"/></div><div class="divTableCell"><input type="text" th:field="*{minSupplierRequest}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.comments}"/></div><div class="divTableCell"><input type="text" th:field="*{comments}"/></div></div>
-      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.evaluation}"/></div><div class="divTableCell"><input type="text" th:field="*{evaluation}"/></div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.stock}"/></div><div class="divTableCell"><input type="text" th:field="*{stock}"/>
+        <p th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minHiddenStock}"/></div><div class="divTableCell"><input type="text" th:field="*{minHiddenStock}"/>
+        <p th:if="${#fields.hasErrors('minHiddenStock')}" th:errors="*{minHiddenStock}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minSupplierRequest}"/></div><div class="divTableCell"><input type="text" th:field="*{minSupplierRequest}"/>
+        <p th:if="${#fields.hasErrors('minSupplierRequest')}" th:errors="*{minSupplierRequest}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.comments}"/></div><div class="divTableCell"><textarea rows="4" cols="30" th:field="*{comments}"/>
+        <p th:if="${#fields.hasErrors('comments')}" th:errors="*{comments}" th:errorclass="error"/><br>
+      </div></div>
+      <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.evaluation}"/></div><div class="divTableCell"><input type="text" th:field="*{evaluation}"/>
+        <p th:if="${#fields.hasErrors('evaluation')}" th:errors="*{evaluation}" th:errorclass="error"/><br>
+      </div></div>
     </div>
   </div>
     <input type="submit" th:value="#{form.update}">
