--- a/src/main/resources/templates/fragments/product/detail.html
+++ b/src/main/resources/templates/fragments/product/detail.html
@@ -23,8 +23,9 @@
                 </th:block>
             </div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.stock}"/></div><div class="divTableCell"><th:block th:text="*{stock}"/></div></div>
-            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minHiddenStock}"/></div><div class="divTableCell"><th:block th:text="*{minHiddenStock}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minSupplierRequest}"/></div><div class="divTableCell"><th:block th:text="*{minSupplierRequest}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.minHiddenStock}"/></div><div class="divTableCell"><th:block th:text="*{minHiddenStock}"/></div></div>
+            <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.hidden}"/></div><div class="divTableCell"><th:block th:text="*{hidden}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.comments}"/></div><div class="divTableCell"><th:block th:text="*{comments}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.evaluation}"/></div><div class="divTableCell"><th:block th:text="*{evaluation}"/></div></div>
             <div class="divTableRow"><div class="divTableCell"><th:block th:text="#{product.detail.totalSalesAmount}"/></div><div class="divTableCell"><th:block th:text="*{totalSalesAmount}"/></div></div>
