Changed error not authenticated view

--- a/src/main/resources/templates/fragments/error/error.html
+++ b/src/main/resources/templates/fragments/error/error.html
@@ -1,1 +1,2 @@
 <div th:fragment="notFound"><p class="error"><th:block th:text="#{error.notFound}"/></p></div>
+<div th:fragment="notAuthenticated"><p class="error"><th:block th:text="#{error.notAuthenticated}"/></p><a href="http://localhost:8080/admin/login"><th:block th:text="#{form.login}"/></a></div>
